data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_825.wast
;; 6. **Conditional Loop Entry with br_if**:    - Design a loop where entry depends on a `br_if` branching past the loop under certain conditions. Ensure context setup reflects both entry and bypass scenarios.    - **Constraint**: Properly manage stack and context setup for conditional loop entries.    - **CFG Check**: Confirm the CFG includes both the entry and the bypass paths.

(assert_invalid
  (module
    (func $conditional-loop-entry (param i32) (result i32)
      (block (result i32)
        (br_if 0 (local.get 0))
        (loop (result i32)
          (i32.const 1)
          (br_if 1 (i32.const 0))
          (i32.const 2)
        )
      )
    )
  )
  "type mismatch"
)